# carfax_service

./: Dockerfile  config.py  conftest.py  docker-compose.yml  entrypoint.sh  exeptions.py  main.py  pyproject.toml  schemas.py  serve_rpc.py
.github/workflows/: docker-build-push.yml
alembic/: env.py
alembic/versions/: 3185ee63275e_add_auction_lotid.py  86f9a0beaaae_init.py  a4daee270ea5_update_carfax.py  babe5151fe18_init.py
api/: carfax_api.py  types.py
core/: utils.py
database/: __init__.py
database/crud/: base.py  carfax_purchases.py
database/db/: __init__.py  init_db.py  session.py
database/models/: carfax_purchases.py
database/schemas/: carfax_purchases.py
dependencies/: carfax_client.py  get_user.py
rabbit_service/: base.py  custom_consumer.py
routers/: __init__.py  carfax.py  health.py
rpc_client_server/: auction_api.py  carfax_server.py  checkout_stripe_client.py  health.py
schemas/: carfax_purchase.py  carfax_with_checkout.py
test/: test_carfax.py
